--- a/notebook/swc.ipynb
+++ b/notebook/swc.ipynb
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "id": "vocal-academy",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "smart-narrow",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "sitting-sympathy",
    "metadata": {},
    "outputs": [
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "id": "unnecessary-dinner",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
    "id": "brown-drilling",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "id": "tamil-cambridge",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 48,
    "id": "extended-restoration",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "id": "roman-jason",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "id": "composite-liberal",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 51,
    "id": "level-english",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 52,
    "id": "intended-hayes",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "id": "assigned-scene",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 54,
    "id": "reduced-equilibrium",
    "metadata": {},
    "outputs": [
@@ -1806,6 +1806,220 @@
     "* `X or Y` is true if either `X` or `Y`, or both, are true.\n",
     "* Zero, the empty string, and the empty list are considered false; all other numbers, strings, and lists are considered true.\n",
     "* `True` and `False` represent truth values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "rural-capacity",
+   "metadata": {},
+   "source": [
+    "## Creating Functions\n",
+    "\n",
+    "Python functions open with the keyword `def` followed by the name of the function, parenthesised lists of parameter names, and ends with a colon. The body of the function, the statements that are executed when the function is called, is indented below the definition line. The body concludes with the `return` keyword followed with the return value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "logical-wyoming",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.77777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fahr_to_celsius(temp):\n",
+    "    return((temp - 32) * (5/9))\n",
+    "\n",
+    "print(fahr_to_celsius(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "balanced-treasury",
+   "metadata": {},
+   "source": [
+    "Note that a `return` keyword is necessary unlike other languages that will automatically return the last result. A value of the class `NoneType` is returned.\n",
+    "\n",
+    "In Python, functions are not required to include a `return` statement and can be used for the sole purpose of grouping together pieces of code that conceptually fit together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "turkish-lodging",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fahr_to_celsius_no_return(temp):\n",
+    "    (temp - 32) * (5/9)\n",
+    "    \n",
+    "no_return = fahr_to_celsius_no_return(100)\n",
+    "print(type(no_return))\n",
+    "print(no_return)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "complex-longitude",
+   "metadata": {},
+   "source": [
+    "To _compose_ a function means to apply one function to the result of another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "angry-company",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "373.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def celsius_to_kelvin(temp_c):\n",
+    "    return(temp_c + 273.15)\n",
+    "\n",
+    "def fahr_to_kelvin(temp_f):\n",
+    "    temp_c = fahr_to_celsius(temp_f)\n",
+    "    temp_k = celsius_to_kelvin(temp_c)\n",
+    "    return(temp_k)\n",
+    "\n",
+    "print(fahr_to_kelvin(212))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "soviet-calgary",
+   "metadata": {},
+   "source": [
+    "Variables created inside functions no longer exist once the function has finished executing, i.e. local variables, just like in other languages. Assign the result of a function to a variable to keep the result, i.e. global variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pregnant-reconstruction",
+   "metadata": {},
+   "source": [
+    "Documentation for a function can be included inside the function as the first string that is not assigned to a variable. If a triple quote is used, a string can be separated across multiple lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "younger-glasgow",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function celsius_to_kelvin in module __main__:\n",
+      "\n",
+      "celsius_to_kelvin(temp_c)\n",
+      "    Converts Celsius to Kelvin.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> celsius_to_kelvin(42)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def celsius_to_kelvin(temp_c):\n",
+    "    \"\"\"\n",
+    "    Converts Celsius to Kelvin.\n",
+    "    \n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> celsius_to_kelvin(42)\n",
+    "    \"\"\"\n",
+    "    return(temp_c + 273.15)\n",
+    "\n",
+    "help(celsius_to_kelvin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "authorized-wales",
+   "metadata": {},
+   "source": [
+    "Set default values for parameters by assigning a value. If the parameter name is not specified, arguments are read positionally from left to right."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "regular-insertion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no parameters:\n",
+      "a: 1 b: 2 c: 3\n",
+      "one parameter:\n",
+      "a: 55 b: 2 c: 3\n",
+      "two parameters:\n",
+      "a: 55 b: 66 c: 3\n",
+      "only setting c\n",
+      "a: 1 b: 2 c: 77\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display(a=1, b=2, c=3):\n",
+    "    print('a:', a, 'b:', b, 'c:', c)\n",
+    "\n",
+    "print('no parameters:')\n",
+    "display()\n",
+    "print('one parameter:')\n",
+    "display(55)\n",
+    "print('two parameters:')\n",
+    "display(55, 66)\n",
+    "print('only setting c')\n",
+    "display(c = 77)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "chief-valuable",
+   "metadata": {},
+   "source": [
+    "* Define a function using `def function_name(parameter)`.\n",
+    "* The body of a function must be indented.\n",
+    "* Call a function using `function_name(value)`.\n",
+    "* Numbers are stored as integers or floating-point numbers.\n",
+    "* Variables defined within a function can only be seen and used within the body of the function.\n",
+    "* Variables created outside of any function are called global variables.\n",
+    "* Within a function, we can access global variables.\n",
+    "* Variables created within a function override global variables if their names match.\n",
+    "* Use `help(thing)` to view help for something.\n",
+    "* Put docstrings in functions to provide help for that function.\n",
+    "* Specify default values for parameters when defining a function using `name=value` in the parameter list.\n",
+    "* Parameters can be passed by matching based on name, by position, or by omitting them (in which case the default value is used).\n",
+    "* Put code whose parameters change frequently in a function, then call it with different parameter values to customise its behaviour."
    ]
   }
  ],
