--- a/notebook/swc.ipynb
+++ b/notebook/swc.ipynb
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-capacity",
+   "id": "silver-senate",
    "metadata": {},
    "source": [
     "## Creating Functions\n",
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "logical-wyoming",
+   "id": "turned-wichita",
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-treasury",
+   "id": "cellular-projector",
    "metadata": {},
    "source": [
     "Note that a `return` keyword is necessary unlike other languages that will automatically return the last result. A value of the class `NoneType` is returned.\n",
@@ -1852,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "turkish-lodging",
+   "id": "proved-syndrome",
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-longitude",
+   "id": "published-spectacular",
    "metadata": {},
    "source": [
     "To _compose_ a function means to apply one function to the result of another."
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "angry-company",
+   "id": "conditional-science",
    "metadata": {},
    "outputs": [
     {
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "soviet-calgary",
+   "id": "regional-pendant",
    "metadata": {},
    "source": [
     "Variables created inside functions no longer exist once the function has finished executing, i.e. local variables, just like in other languages. Assign the result of a function to a variable to keep the result, i.e. global variable."
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pregnant-reconstruction",
+   "id": "literary-recipient",
    "metadata": {},
    "source": [
     "Documentation for a function can be included inside the function as the first string that is not assigned to a variable. If a triple quote is used, a string can be separated across multiple lines."
@@ -1926,7 +1926,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "younger-glasgow",
+   "id": "collaborative-wholesale",
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-wales",
+   "id": "acknowledged-bulgaria",
    "metadata": {},
    "source": [
     "Set default values for parameters by assigning a value. If the parameter name is not specified, arguments are read positionally from left to right."
@@ -1970,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "regular-insertion",
+   "id": "essential-hebrew",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chief-valuable",
+   "id": "italic-musical",
    "metadata": {},
    "source": [
     "* Define a function using `def function_name(parameter)`.\n",
@@ -2020,6 +2020,60 @@
     "* Specify default values for parameters when defining a function using `name=value` in the parameter list.\n",
     "* Parameters can be passed by matching based on name, by position, or by omitting them (in which case the default value is used).\n",
     "* Put code whose parameters change frequently in a function, then call it with different parameter values to customise its behaviour."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bound-stations",
+   "metadata": {},
+   "source": [
+    "## Errors and Exceptions\n",
+    "\n",
+    "Errors in Python have a very specific form called a **trackback**, which contains the sequence of function calls that led to an error. Long tracebacks simply indicates that many functions were called before the error was encountered. Most of the time, the actual place where the error occurred is at the bottom-most level, so you can skip down the traceback to the bottom. See this list of [built-in exceptions](https://docs.python.org/3/library/exceptions.html) for more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "transsexual-suggestion",
+   "metadata": {},
+   "source": [
+    "Syntax errors occur, for example, when you forget a colon at the end of a line, accidentally add too many spaces when indenting, or forget a parenthesis. This is similar to forgetting punctuation in English and it becomes difficult to interpret the text. Python will inform us that there is a syntax error with a `SyntaxError` or `IndentationError` message and a caret (`^`) indicating where the syntax error occurred. For indentation, note that Python does not allow you to mix tabs and spaces; either tabs or spaces are used and their use needs to be consistent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "unexpected-tourist",
+   "metadata": {},
+   "source": [
+    "Another common type of error is called a `NameError` and occurs when you try to use a variable that does not exist (not defined yet or a result of a typo) or forgot to put quotes around a string. This results in a `name variable_name is not defined`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dimensional-found",
+   "metadata": {},
+   "source": [
+    "An `IndexError` occurs when we try to access a list index that does not exist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "violent-cargo",
+   "metadata": {},
+   "source": [
+    "A `FileNotFoundError` occurs when we try to read a file that does not exist. An `UnsupportedOperationError` occurs when we try to write to a file that was opened \"read-only\". More generally, problems with input and output manifest as `IOError` or `OSError` errors, depending on the version of Python used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "provincial-howard",
+   "metadata": {},
+   "source": [
+    "* Tracebacks can look intimidating, but they give us a lot of useful information about what went wrong in our program, including where the error occurred and what type of error it was.\n",
+    "* An error having to do with the \"grammar\" or syntax of the program is called a `SyntaxError`. If the issue has to do with how the code is indented, then it will be called an `IndentationError`.\n",
+    "* A `NameError` will occur when trying to use a variable that does not exist. Possible causes are that a variable definition is missing, a variable reference differs from its definition in spelling or capitalization, or the code contains a string that is missing quotes around it.\n",
+    "* Containers like lists and strings will generate errors if you try to access items in them that do not exist. This type of error is called an `IndexError`.\n",
+    "* Trying to read a file that does not exist will give you an `FileNotFoundError`. Trying to read a file that is open for writing, or writing to a file that is open for reading, will give you an `IOError`."
    ]
   }
  ],
