--- a/notebook/swc.ipynb
+++ b/notebook/swc.ipynb
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-suggestion",
+   "id": "straight-sample",
    "metadata": {},
    "source": [
     "Syntax errors occur, for example, when you forget a colon at the end of a line, accidentally add too many spaces when indenting, or forget a parenthesis. This is similar to forgetting punctuation in English and it becomes difficult to interpret the text. Python will inform us that there is a syntax error with a `SyntaxError` or `IndentationError` message and a caret (`^`) indicating where the syntax error occurred. For indentation, note that Python does not allow you to mix tabs and spaces; either tabs or spaces are used and their use needs to be consistent."
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-tourist",
+   "id": "turkish-empire",
    "metadata": {},
    "source": [
     "Another common type of error is called a `NameError` and occurs when you try to use a variable that does not exist (not defined yet or a result of a typo) or forgot to put quotes around a string. This results in a `name variable_name is not defined`."
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-found",
+   "id": "affecting-reality",
    "metadata": {},
    "source": [
     "An `IndexError` occurs when we try to access a list index that does not exist."
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "violent-cargo",
+   "id": "monthly-container",
    "metadata": {},
    "source": [
     "A `FileNotFoundError` occurs when we try to read a file that does not exist. An `UnsupportedOperationError` occurs when we try to write to a file that was opened \"read-only\". More generally, problems with input and output manifest as `IOError` or `OSError` errors, depending on the version of Python used."
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-howard",
+   "id": "experienced-essay",
    "metadata": {},
    "source": [
     "* Tracebacks can look intimidating, but they give us a lot of useful information about what went wrong in our program, including where the error occurred and what type of error it was.\n",
@@ -2074,6 +2074,168 @@
     "* A `NameError` will occur when trying to use a variable that does not exist. Possible causes are that a variable definition is missing, a variable reference differs from its definition in spelling or capitalization, or the code contains a string that is missing quotes around it.\n",
     "* Containers like lists and strings will generate errors if you try to access items in them that do not exist. This type of error is called an `IndexError`.\n",
     "* Trying to read a file that does not exist will give you an `FileNotFoundError`. Trying to read a file that is open for writing, or writing to a file that is open for reading, will give you an `IOError`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "opposed-fluid",
+   "metadata": {},
+   "source": [
+    "## Defensive Programming\n",
+    "\n",
+    "In order to indicate whether a program is getting the right answer and _still_ getting the right answer after making changes, we need to:\n",
+    "\n",
+    "* Write programs that check their own operation.\n",
+    "* Write and run tests for widely-used functions.\n",
+    "* Make sure we know what \"correct\" actually means."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "digital-glance",
+   "metadata": {},
+   "source": [
+    "### Assertions\n",
+    "\n",
+    "An assertion is an expression that is supposed to be true at a particular point in a program. Programmers typically put assertions in their code to check for errors; if the assertion fails (i.e., if the expression evaluates as false), the program halts and produces an error message. We can add assertions to our code so that it checks itself as it runs and this is known as defensive programming: the practice of writing programs that check their own operation to catch errors as early as possible.\n",
+    "\n",
+    "An assertion is simply a _statement that something must be true at a certain point in a program_. When Python comes across an assertion, it evaluates the assertion's condition and if it is true, nothing happens, but if it is false, the program immediately halts with `AssertionError` and an error message is outputted if provided."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "experimental-complex",
+   "metadata": {},
+   "source": [
+    "Broadly speaking, assertions fall into three categories:\n",
+    "\n",
+    "* A precondition is something that must be true at the start of a function in order for it to work correctly.\n",
+    "* A postcondition is something that the function guarantees is true when it finishes.\n",
+    "* An invariant is something that is always true at a particular point inside a piece of code.\n",
+    "\n",
+    "For example, suppose we are representing rectangles using a tuple of four coordinates `(x0, y0, x1, y1)` representing the lower left and upper right corners of the rectangle. In order to perform some calculations, we need to normalise the rectangle such that the lower left corner is at the origin and the longest side if 1.0 units long. The following function performs the normalisation as well as checks whether the input is correctly formatted and that the result make sense."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "center-pharmaceutical",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalise_rectangle(rect):\n",
+    "    \"\"\"Normalises a rectangle so that it is at the origin and 1.0 units long on its longest axis.\n",
+    "    Input should be of the format (x0, y0, x1, y1).\n",
+    "    (x0, y0) and (x1, y1) define the lower left and upper right corners\n",
+    "    of the rectangle, respectively.\"\"\"\n",
+    "    assert len(rect) == 4, 'Rectangles must contain 4 coordinates'\n",
+    "    x0, y0, x1, y1 = rect\n",
+    "    # x1 should be on the right of x0\n",
+    "    assert x0 < x1, 'Invalid X coordinates'\n",
+    "    # y1 should be on the top of y0\n",
+    "    assert y0 < y1, 'Invalid Y coordinates'\n",
+    "\n",
+    "    # change in x is the length of horizontal edge\n",
+    "    dx = x1 - x0\n",
+    "    # change in y is the length of the vertical edge\n",
+    "    dy = y1 - y0\n",
+    "    # scaled contains the ratio between the horizontal and vertical edge\n",
+    "    # which we can use for normalisation\n",
+    "    if dx > dy:\n",
+    "        scaled = float(dy) / dx\n",
+    "        upper_x, upper_y = 1.0, scaled\n",
+    "    else:\n",
+    "        scaled = float(dx) / dy\n",
+    "        upper_x, upper_y = scaled, 1.0\n",
+    "\n",
+    "    # note that upper_x and upper_y are defined in the if-else block but are available outside\n",
+    "    assert 0 < upper_x <= 1.0, 'Calculated upper X coordinate invalid'\n",
+    "    assert 0 < upper_y <= 1.0, 'Calculated upper Y coordinate invalid'\n",
+    "\n",
+    "    return (0, 0, upper_x, upper_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tribal-balloon",
+   "metadata": {},
+   "source": [
+    "Call `normalise_rectange`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "generous-little",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0, 1.0, 0.25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(normalise_rectangle((1, 1, 5, 2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "natural-finland",
+   "metadata": {},
+   "source": [
+    "Assertions aren't just about catching errors but they also help people understand programs. Each assertion gives the person reading the program a change to check that their understanding matches what the code is doing.\n",
+    "\n",
+    "Most good programmers follow two rules when adding assertions to their code:\n",
+    "\n",
+    "1. Fail early, fail often\n",
+    "\n",
+    "The greater the distance between when and where an error occurred and when it is noticed, the harder the error will be to debug, so good code catches mistakes as early as possible.\n",
+    "\n",
+    "2. Turn bugs into assertions or tests.\n",
+    "\n",
+    "Whenever you fix a bug, write an assertion that catches the mistake should you make it again. If you made a mistake in a piece of code, the odds are good that you have made other mistakes nearby, or will make the same mistake (or a related one) the next time you change it. Writing assertions to check that you have not regressed (re-introduced an old problem) can save a lot of time in the long run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "distant-variance",
+   "metadata": {},
+   "source": [
+    "### Test-Driven Development\n",
+    "\n",
+    "An assertion checks that something is true as a particular point in the program. The next step is to check the overall behaviour of a piece of code, i.e., to make sure that it produces the right output when it has been given a particular input. For example, suppose we need to find where two or more time series overlap and output the largest range that they all include. The input is the range of each time series represented as a pair of numbers (start and end).\n",
+    "\n",
+    "Most novice programmers would solve this problem in the following manner:\n",
+    "\n",
+    "1. Write a function `range_overlap`.\n",
+    "2. Call it interactively on two or three different inputs.\n",
+    "3. If it produces the wrong answer, fix the function and re-run that test.\n",
+    "\n",
+    "The approach above works but there is a better way:\n",
+    "\n",
+    "1. Write a short function for each test.\n",
+    "2. Write a `range_overlap` function that should pass those tests.\n",
+    "3. If `range_overlap` produces any incorrect answers, fix it and re-run the test functions.\n",
+    "\n",
+    "Writing unit tests _before_ writing the code they test is called test-driven development (TDD). Advocates of this approach believe it produces better code faster because:\n",
+    "\n",
+    "1. If people write tests after writing the thing to be tested, they are subject to confirmation bias, i.e., they subconsciously write tests to show that their code is correct, rather than to find errors.\n",
+    "2. Writing tests helps programmers figure out what the function is actually supposed to do."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "interested-hawaii",
+   "metadata": {},
+   "source": [
+    "* Program defensively, i.e., assume that errors are going to arise, and write code to detect them when they do.\n",
+    "* Put assertions in programs to check their state as they run, and to help readers understand how those programs are supposed to work.\n",
+    "* Use preconditions to check that the inputs to a function are safe to use.\n",
+    "* Use postconditions to check that the output from a function is safe to use.\n",
+    "* Write tests before writing code in order to help determine exactly what that code is supposed to do."
    ]
   }
  ],
