--- a/notebook/swc.ipynb
+++ b/notebook/swc.ipynb
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-sample",
+   "id": "successful-royalty",
    "metadata": {},
    "source": [
     "Syntax errors occur, for example, when you forget a colon at the end of a line, accidentally add too many spaces when indenting, or forget a parenthesis. This is similar to forgetting punctuation in English and it becomes difficult to interpret the text. Python will inform us that there is a syntax error with a `SyntaxError` or `IndentationError` message and a caret (`^`) indicating where the syntax error occurred. For indentation, note that Python does not allow you to mix tabs and spaces; either tabs or spaces are used and their use needs to be consistent."
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turkish-empire",
+   "id": "dense-pantyhose",
    "metadata": {},
    "source": [
     "Another common type of error is called a `NameError` and occurs when you try to use a variable that does not exist (not defined yet or a result of a typo) or forgot to put quotes around a string. This results in a `name variable_name is not defined`."
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-reality",
+   "id": "unauthorized-custom",
    "metadata": {},
    "source": [
     "An `IndexError` occurs when we try to access a list index that does not exist."
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-container",
+   "id": "sporting-florida",
    "metadata": {},
    "source": [
     "A `FileNotFoundError` occurs when we try to read a file that does not exist. An `UnsupportedOperationError` occurs when we try to write to a file that was opened \"read-only\". More generally, problems with input and output manifest as `IOError` or `OSError` errors, depending on the version of Python used."
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-essay",
+   "id": "based-hebrew",
    "metadata": {},
    "source": [
     "* Tracebacks can look intimidating, but they give us a lot of useful information about what went wrong in our program, including where the error occurred and what type of error it was.\n",
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-fluid",
+   "id": "previous-microphone",
    "metadata": {},
    "source": [
     "## Defensive Programming\n",
@@ -2092,7 +2092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "digital-glance",
+   "id": "affiliated-short",
    "metadata": {},
    "source": [
     "### Assertions\n",
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-complex",
+   "id": "touched-backup",
    "metadata": {},
    "source": [
     "Broadly speaking, assertions fall into three categories:\n",
@@ -2119,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "center-pharmaceutical",
+   "id": "tight-rehabilitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tribal-balloon",
+   "id": "universal-bottle",
    "metadata": {},
    "source": [
     "Call `normalise_rectange`."
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "generous-little",
+   "id": "stable-bracket",
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "natural-finland",
+   "id": "animal-giant",
    "metadata": {},
    "source": [
     "Assertions aren't just about catching errors but they also help people understand programs. Each assertion gives the person reading the program a change to check that their understanding matches what the code is doing.\n",
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distant-variance",
+   "id": "incredible-fraud",
    "metadata": {},
    "source": [
     "### Test-Driven Development\n",
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interested-hawaii",
+   "id": "consolidated-employee",
    "metadata": {},
    "source": [
     "* Program defensively, i.e., assume that errors are going to arise, and write code to detect them when they do.\n",
@@ -2236,6 +2236,262 @@
     "* Use preconditions to check that the inputs to a function are safe to use.\n",
     "* Use postconditions to check that the output from a function is safe to use.\n",
     "* Write tests before writing code in order to help determine exactly what that code is supposed to do."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "floppy-velvet",
+   "metadata": {},
+   "source": [
+    "## Debugging\n",
+    "\n",
+    "The first step in debugging something is to _know what it is supposed to do_. In order to diagnose and fix problems, we need to be able to tell correct output from incorrect. We are ready to start debugging when we can write a test for the failing case, i.e., if we can assert that with _these_ inputs, the function should produce _that_ result. If we can't, then we need to figure out how we are going to know when we have fixed things.\n",
+    "\n",
+    "The following are some tips for debugging:\n",
+    "\n",
+    "1. Test with simplified data.\n",
+    "2. Test a simplified case.\n",
+    "3. Compare to an oracle, where a test oracle is something whose results are trusted, such as experimental data, an older program, or a human expert.\n",
+    "4. Check conservation laws. Mass, energy, and other quantities are conserved in physical systems, so they should be in programs as well. For example, the number of cases/records should remain the same (unless they were intentionally filtered out) throughout a program.\n",
+    "5. Visualise. Visualisations are a very useful tool for checking results and can reveal issues not easily detected by looking at code itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "established-wisdom",
+   "metadata": {},
+   "source": [
+    "Another concept is to build a test case that _fails every time_, highlighting the need to determine a test case that consistently fails. In addition, make sure that we are testing what we think we are testing, for example are we testing the right data set in the right environment?\n",
+    "\n",
+    "A test should fail as fast as possible so that we can actually spend time debugging. This can be achieved by using a simplified test case.\n",
+    "\n",
+    "We should test one thing at a time to help pinpoint the problem. In addition, keep track of the list of changes/tests that have been conducted to avoid repeating yourself and to develop leads, i.e., determine the next thing that needs to be tested.\n",
+    "\n",
+    "Version control is often used to reset software to a known state during debugging and to explore recent changes to code that might be responsible for bugs. In particular, most version control systems have:\n",
+    "\n",
+    "1. a `blame` command that shows who last changed each line of a file and\n",
+    "2. a `bisect` command that helps with finding the commit that introduced an issue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fourth-party",
+   "metadata": {},
+   "source": [
+    "We should ask for help if we find ourselves stuck on a problem for too long (although I hardly do this even though I should!). Explaining the problem to someone else is often useful, since hearing what we're thinking helps us spot inconsistencies and hidden assumptions. You can even explain your problem to a [rubber duck](https://en.wikipedia.org/wiki/Rubber_duck_debugging)!\n",
+    "\n",
+    "Remember:\n",
+    "\n",
+    "* Know what code is supposed to do before trying to debug it.\n",
+    "* Make it fail every time.\n",
+    "* Make it fail fast.\n",
+    "* Change one thing at a time, and for a reason.\n",
+    "* Keep track of what you’ve done.\n",
+    "* Be humble."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dutch-dairy",
+   "metadata": {},
+   "source": [
+    "## Command-Line Programs\n",
+    "\n",
+    "Whenever Python runs a program, it takes all of the values given on the command line and puts them in the list `sys.argv`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aggregate-things",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.argv is ['/opt/conda/lib/python3.8/site-packages/ipykernel_launcher.py', '-f', '/home/jovyan/.local/share/jupyter/runtime/kernel-2ea071c8-09b4-4ca0-991c-75e983d3813b.json']\n",
+      "first argv is /opt/conda/lib/python3.8/site-packages/ipykernel_launcher.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print('sys.argv is', sys.argv)\n",
+    "print('first argv is', sys.argv[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wound-liverpool",
+   "metadata": {},
+   "source": [
+    "This can be used to create a script that prints row means of a single data file. By convention the function that outlines our implementation is called `main`. In order for a Python script to run as a script, we typically put the part of the script that produces the output in a `if __name__ == '__main__':` statement.\n",
+    "\n",
+    "When running a Python script in bash, `__name__` is always set to `__main__` so that you can determine if the file is being run as a script."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "interesting-economy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import numpy\n",
+    "\n",
+    "def main():\n",
+    "    script = sys.argv[0]\n",
+    "    filename = sys.argv[1]\n",
+    "    data = numpy.loadtxt(filename, delimiter=',')\n",
+    "    for row_mean in numpy.mean(data, axis=1):\n",
+    "        print(row_mean)\n",
+    "        \n",
+    "# if __name__ == '__main__':\n",
+    "#    main()\n",
+    "\n",
+    "print(__name__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "governmental-affair",
+   "metadata": {},
+   "source": [
+    "Command-line flags can be included in the following manner:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "clean-crime",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import numpy\n",
+    "\n",
+    "def main():\n",
+    "    script = sys.argv[0]\n",
+    "    action = sys.argv[1]\n",
+    "    filenames = sys.argv[2:]\n",
+    "    assert action in ['--min', '--mean', '--max'], \\\n",
+    "           'Action is not one of --min, --mean, or --max: ' + action\n",
+    "    for filename in filenames:\n",
+    "        process(filename, action)\n",
+    "\n",
+    "def process(filename, action):\n",
+    "    data = numpy.loadtxt(filename, delimiter=',')\n",
+    "\n",
+    "    if action == '--min':\n",
+    "        values = numpy.min(data, axis=1)\n",
+    "    elif action == '--mean':\n",
+    "        values = numpy.mean(data, axis=1)\n",
+    "    elif action == '--max':\n",
+    "        values = numpy.max(data, axis=1)\n",
+    "\n",
+    "    for val in values:\n",
+    "        print(val)\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "honest-reunion",
+   "metadata": {},
+   "source": [
+    "Standard input is stored in `sys.stdin` but since we're running the code in a Jupyter Notebook, there is no standard input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "efficient-prediction",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='<stdin>' mode='r' encoding='utf-8'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "print(sys.stdin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "clear-spokesman",
+   "metadata": {},
+   "source": [
+    "`sys.stdin` can be used like a filename and the script below can process both listed files or STDIN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "guilty-adolescent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import numpy\n",
+    "\n",
+    "def main():\n",
+    "    script = sys.argv[0]\n",
+    "    action = sys.argv[1]\n",
+    "    filenames = sys.argv[2:]\n",
+    "    assert action in ['--min', '--mean', '--max'], \\\n",
+    "           'Action is not one of --min, --mean, or --max: ' + action\n",
+    "    if len(filenames) == 0:\n",
+    "        process(sys.stdin, action)\n",
+    "    else:\n",
+    "        for filename in filenames:\n",
+    "            process(filename, action)\n",
+    "\n",
+    "def process(filename, action):\n",
+    "    data = numpy.loadtxt(filename, delimiter=',')\n",
+    "\n",
+    "    if action == '--min':\n",
+    "        values = numpy.min(data, axis=1)\n",
+    "    elif action == '--mean':\n",
+    "        values = numpy.mean(data, axis=1)\n",
+    "    elif action == '--max':\n",
+    "        values = numpy.max(data, axis=1)\n",
+    "\n",
+    "    for val in values:\n",
+    "        print(val)\n",
+    "\n",
+    "# if __name__ == '__main__':\n",
+    "#    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "therapeutic-federal",
+   "metadata": {},
+   "source": [
+    "In summary:\n",
+    "\n",
+    "* The `sys` library connects a Python program to the system it is running on.\n",
+    "* The list `sys.argv` contains the command-line arguments that a program was run with.\n",
+    "* Avoid silent failures.\n",
+    "* The pseudo-file `sys.stdin` connects to a program's standard input."
    ]
   }
  ],
