--- a/notebook/numpy.ipynb
+++ b/notebook/numpy.ipynb
@@ -541,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<numpy.nditer object at 0x7f149407adf0>\n",
+      "<numpy.nditer object at 0x7f5ec806bdf0>\n",
       "1\n",
       "2\n",
       "3\n",
@@ -751,6 +751,164 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Matrix operations\n",
+    "\n",
+    "Many machine learning algorithms rely on finding a vector of coefficients (internal coefficients) that can result in an approximation of the vector of response values when multiplied by the matrix of features. In such models, the formulation is:\n",
+    "\n",
+    "$$ y = Xb + c $$\n",
+    "\n",
+    "where $y$ is the response vector, $X$ the feature matrix, $b$ is the vector of coefficients, and $c$ is a scalar constant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2 -2  3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([\n",
+    "    [4, 5],\n",
+    "    [2, 4],\n",
+    "    [3, 3]\n",
+    "])\n",
+    "b = [3, -2]\n",
+    "\n",
+    "print(X @ b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transposition occurs when a $n{\\times}m$ matrix is transformed into a $m{\\times}n$ matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 4 7]\n",
+      " [2 9 1]\n",
+      " [8 6 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([\n",
+    "    [1, 2, 8],\n",
+    "    [4, 9, 6],\n",
+    "    [7, 1, 9]\n",
+    "])\n",
+    "\n",
+    "print(A.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matrix inversion is carried out on square matrices, i.e. a $m{\\times}m$ matrix, and this operation allows the immediate resolution of equations involving matrix multiplication. When we multiply a matrix by its inverse we get the Identity Matrix $I$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.00000000e+00 -5.55111512e-17 -6.93889390e-18]\n",
+      " [ 5.55111512e-17  1.00000000e+00 -6.76542156e-17]\n",
+      " [ 8.32667268e-17  0.00000000e+00  1.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([\n",
+    "    [1, 2, 8],\n",
+    "    [4, 9, 6],\n",
+    "    [7, 1, 9]\n",
+    "])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "\n",
+    "print(A @ A_inv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An [example](https://www.mathsisfun.com/algebra/matrix-inverse.html) of how the inverse is useful.\n",
+    "\n",
+    "<blockquote>\n",
+    "    A group took a trip on a bus, at \\$3 per child and \\$3.20 per adult, and paid \\$118.40. They took the train back, at \\$3.50 per child and \\$3.60 per adult, and paid \\$135.20. How many children and adults were in this group?\n",
+    "</blockquote>\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "x_1 & x_2\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "3 & 3.5 \\\\\n",
+    "3.2 & 3.6\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "118.4 & 135.2\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[118.4 135.2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([\n",
+    "    [3, 3.5],\n",
+    "    [3.2, 3.6]\n",
+    "])\n",
+    "\n",
+    "B = np.array([\n",
+    "    [118.4, 135.2]\n",
+    "])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "\n",
+    "X = B @ A_inv\n",
+    "\n",
+    "print(X @ A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Etc.\n",
     "\n",
     "Random numbers using [numpy.random](https://docs.scipy.org/doc/numpy/reference/routines.random.html)"
@@ -758,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
