--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +128,7 @@
       "[11, 12, 13, 14, 15, 16]\n",
       "[11, 12]\n",
       "16\n",
-      "[15, 16]\n",
-      "range(0, 6)\n"
+      "[15, 16]\n"
      ]
     }
    ],
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +256,8 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "dict_keys(['one', 'two', 'three', 'four'])\n"
+      "dict_keys(['one', 'two', 'three', 'four'])\n",
+      "duff\n"
      ]
     }
    ],
@@ -282,14 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
       "{'two': 2, 'three': 3, 'four': 4}\n"
      ]
     }
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,6 +478,147 @@
     "for key, value in number.items() :\n",
     "    print(key + \" = \" + str(value))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load file\n",
+    "\n",
+    "The `open()` function opens a file and returns a [file object](https://docs.python.org/3/library/io.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '_io.TextIOWrapper'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"../data/iris.csv\")\n",
+    "print(type(f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the method `read()` to read the entire file into a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris = f.read()\n",
+    "print(type(iris))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To read line by line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sepal.Length,Sepal.Width,Petal.Length,Petal.Width,Species\n",
+      "5.1,3.5,1.4,0.2,setosa\n",
+      "4.9,3,1.4,0.2,setosa\n",
+      "4.7,3.2,1.3,0.2,setosa\n",
+      "4.6,3.1,1.5,0.2,setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines_to_print = 5\n",
+    "counter = 0\n",
+    "\n",
+    "with open(\"../data/iris.csv\") as file:\n",
+    "    for line in file:\n",
+    "        counter += 1\n",
+    "        if counter > lines_to_print:\n",
+    "            break\n",
+    "        print(line.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load FASTA\n",
+    "\n",
+    "Code to load a FASTA file as a learning exercise; in practice we should use Biopython."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rosalind_6404 CCTGCGGAAGATCGGCACTAGAATAGCCAGAACCGTTTCTCTGAGGCTTCCGGCCTTCCC\n",
+      "TCCCACTAATAATTCTGAGG\n",
+      "\n",
+      "Rosalind_5959 CCATCGGTAGCGCATCCTTAGTCCAATTAAGTCCCTATCCAGGCGCTCCGCCGAAGGTCT\n",
+      "ATATCCATTTGTCAGCAGACACGC\n",
+      "\n",
+      "Rosalind_0808 CCACCCTCGTGGTATGGCTAGGCATTCAGGAACCGGAGAACGCTTCAGACCAGCCCGGAC\n",
+      "TGGGAACCTGCGGGCAGTAGGTGGAAT\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "my_fasta = {}\n",
+    "\n",
+    "with open(\"../data/gc.fa\") as fasta_file:\n",
+    "    for line in fasta_file:\n",
+    "        # use () to capture a pattern\n",
+    "        my_match = re.search(\"^>(.*)\", line)\n",
+    "        # check if there was a match for a starting caret\n",
+    "        if my_match is not None:\n",
+    "            my_defline = my_match.group(1)\n",
+    "            continue\n",
+    "        # check if the my_defline key exists in dictionary\n",
+    "        if my_defline in my_fasta:\n",
+    "            my_fasta[my_defline] = my_fasta[my_defline] + line\n",
+    "        else:\n",
+    "            my_fasta[my_defline] = line\n",
+    "\n",
+    "# iterate through all FASTA entries\n",
+    "for id in my_fasta:\n",
+    "    print(id, my_fasta[id])"
+   ]
   }
  ],
  "metadata": {
@@ -497,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
